[package]
name = "fightcade-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]}
windows-sys = { version = "0.52.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
